@@ -1,5 +1,8 @@
 2011-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-score.el (gnus-summary-increase-score): Doc clarification
+	(bug#9421).
+
 	* gnus-spec.el (gnus-face-0): Make all the face specs into defcustoms
 	(bug#9425).
 
